--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>rru information</title>
   <body>
     <h1>MESS FOOD</h1>
-    <h4>date: 08/09/2022</h4><br>
+    <h4>date: 09/09/2022</h4><br><h4> Friday</h4>
     <h2>BREAKFAST</h2>
     <h3>tea</h3>
     <h3></h3>
