--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  
       <h3>By</h3>
      
-      <h2> 🤕SIR SANAT MATHURIAYA U+1F915</h2>
+      <h2> 🤕SIR SANAT MATHURIAYA </h2>
       <hr size="3" noshade>
     </center>
     
