--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html>
 <head>
     <title>Gurukul</title>
+    <style>
+        .passport-section {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+
+        .passport-photo {
+            text-align: center;
+            margin: 0 20px;
+        }
+    </style>
 </head>
 <body>
     <div class="home">
@@ -21,12 +33,38 @@
         </nav>
     </div>
     <div class="content">
+        <div class="passport-section">
+            <div class="passport-photo">
+                <h2>Person 1</h2>
+                <img src="photo1.jpg" alt="Person 1">
+                <p>Name: Person 1</p>
+                <p>Designation: Designation 1</p>
+            </div>
+            <div class="passport-photo">
+                <h2>Person 2</h2>
+                <img src="photo2.jpg" alt="Person 2">
+                <p>Name: Person 2</p>
+                <p>Designation: Designation 2</p>
+            </div>
+            <div class="passport-photo">
+                <h2>Person 3</h2>
+                <img src="photo3.jpg" alt="Person 3">
+                <p>Name: Person 3</p>
+                <p>Designation: Designation 3</p>
+            </div>
+            <div class="passport-photo">
+                <h2>Person 4</h2>
+                <img src="photo4.jpg" alt="Person 4">
+                <p>Name: Person 4</p>
+                <p>Designation: Designation 4</p>
+            </div>
+        </div>
         <div class="about">
             <h2>What is Gurukul?</h2>
             <p>Gurukul is a place of learning where students receive education in a traditional and holistic manner. It focuses on imparting knowledge, values, and life skills to help students become well-rounded individuals.</p>
         </div>
         <div class="photos">
-            <h2>Event Photos</h2>
+            <h2>Gallery</h2>
             <div class="gallery">
                 <img src="event1.jpg" alt="Event 1">
                 <img src="event2.jpg" alt="Event 2">
