--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <div class="passport-photo">
                 <h2>Person 1</h2>
                 <img src="photo1.jpg" alt="Person 1">
-                <p>Name: Person 1</p>
-                <p>Designation: Designation 1</p>
+                <p>Vishal Kumar Mandal</p>
+                <p>Founder & CEO</p>
             </div>
             <div class="passport-photo">
                 <h2>Person 2</h2>
