--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h2>Person 1</h2>
                 <img src="photo1.jpg" alt="Person 1">
                 <p>Vishal Kumar Mandal</p>
-                <p>Founder & CEO</p>
+                <p>Bs Mat Pucho</p>
             </div>
             <div class="passport-photo">
                 <h2>Person 2</h2>
